add license type to package.json
npm doesn't pick up license type from file (unlike github)

--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "docker",
     "docker compose"
   ],
+  "license": "MIT",
   "repository": "https://github.com/markbirbeck/docker-compose-run",
   "bugs": "https://github.com/markbirbeck/docker-compose-run/issues",
   "homepage": "https://github.com/markbirbeck/docker-compose-run"
